--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
-Link{
+.NavLink{
+    margin: 10px;
+    font-size: 20px;
     text-decoration: none;
-    color: black;
+    color: #727170
 }
