Added a new page for showing products list based on category selected. Edited components of homepage and 'all products' page. Edited router for showing products by category.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,12 @@
     text-decoration: none;
     color: #727170
 }
+
+.link{
+    text-decoration: none;
+    color: #727170;   
+}
+
+.link:hover{
+    color: #727170;
+}
